--- a/radar/landing-page/plans.html
+++ b/radar/landing-page/plans.html
@@ -125,7 +125,6 @@
             <i class="fa fa-4x fa-user wow bounceIn text-primary"></i>
             <h2>Basic</h2>
             <p class="text-muted">A small project with a few stakeholders</p>
-            <a href="#" data-action="start-free-basic-trial" class="btn mixpanel btn-primary btn-xl" style='margin-top:10px;'>Start Free Trial</a>
             <h3>1<span class="smallcaps">Active Project</span></h3>
             <h3>1<span class="smallcaps">Project Manager</span></h3>
             <h3>3<span class="smallcaps">Stakeholders</span></h3>
@@ -145,7 +144,7 @@
                 </li>
               </ul>
             </div>
-
+            <a href="#" data-action="start-free-basic-trial" class="btn mixpanel btn-primary btn-xl">Start Free Trial</a>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -153,7 +152,6 @@
             <i class="fa fa-4x fa-user-plus wow bounceIn text-info" data-wow-delay=".1s"></i>
             <h2>Plus</h2>
             <p class="text-muted">A few small or medium sized projects</p>
-            <a href="#" data-action="start-free-standard-trial" class="btn mixpanel btn-info btn-xl" style='margin-top:10px;'>Start Free Trial</a>
             <h3>3<span class="smallcaps">Active Projects</span></h3>
             <h3>2<span class="smallcaps">Project Managers</span></h3>
             <h3>9<span class="smallcaps">Stakeholders</span></h3>
@@ -168,11 +166,11 @@
 
                 </li>
                 <li>
-                  <span><a target='_blank' href='https://github.com'>Github</a> integration</span>
+                  <span>Project team updates via <a target='_blank' href='https://github.com'>Github</a> integration</span>
                 </li>
               </ul>
             </div>
-
+            <a href="#" data-action="start-free-standard-trial" class="btn mixpanel btn-info btn-xl">Start Free Trial</a>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -180,7 +178,6 @@
             <i class="fa fa-4x fa-users wow bounceIn text-success" data-wow-delay=".2s"></i>
             <h2>Enterprise</h2>
             <p class="text-muted">Many projects, various sizes</p>
-            <a href="#" data-action="start-free-corporate-trial" class="btn mixpanel btn-success btn-xl" style='margin-top:10px;'>Start Free Trial</a>
             <h3>Unlimited<span class="smallcaps">Active Projects</span></h3>
             <h3>10<span class="smallcaps">Project Managers</span></h3>
             <h3>Unlimited<span class="smallcaps">Stakeholders</span></h3>
@@ -191,13 +188,15 @@
                   <span>Stakeholder usage analytics</span>
                 </li>
                 <li>
-                  <span><a target='_blank' href="https://www.atlassian.com/software/jira">Jira</a> integration</span>
+                  <span>Project team updates via <a target='_blank' href="https://www.atlassian.com/software/jira">Jira</a> integration</span>
                 </li>
                 <li>
-                  <span><a target='_blank' href="https://www.visualstudio.com/en-us/products/tfs-overview-vs.aspx">TFS</a> integration</span>
+                  <span>Project team updates via <a target='_blank' href="https://www.visualstudio.com/en-us/products/tfs-overview-vs.aspx">TFS</a> integration</span>
                 </li>
               </ul>
             </div>
+
+            <a href="#" data-action="start-free-corporate-trial" class="btn mixpanel btn-success btn-xl">Start Free Trial</a>
           </div>
         </div>
 
