jarvis is alive

--- a/radar/landing-page/stakeholders.html
+++ b/radar/landing-page/stakeholders.html
@@ -93,9 +93,9 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box">
-            <i class="fa fa-4x fa-cloud-download wow bounceIn text-primary"></i>
-            <h3>No need to learn new tools</h3>
-            <p class="text-muted">Radar pulls all relevant data from the tools your team uses today, so you don't have to.</p>
+            <i class="fa fa-4x fa-weixin wow bounceIn text-primary"></i>
+            <h3>Have a conversation</h3>
+            <p class="text-muted">Radar leverages a conversational UI for easy project updates. <a id='openDemo' href='#'>Check out a demo!</a></p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -112,8 +112,15 @@
             <p class="text-muted">Radar provides actionable insight into the current status of your project.</p>
           </div>
         </div>
-
-
+      </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 text-center">
+          <div class="service-box">
+            <i class="fa fa-4x fa-cloud-download wow bounceIn text-primary"></i>
+            <h3>No need to learn new tools</h3>
+            <p class="text-muted">Radar pulls all relevant data from the tools your team uses today, so you don't have to.</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
