--- a/radar/landing-page/index.html
+++ b/radar/landing-page/index.html
@@ -162,6 +162,15 @@
 
 
       </div>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 text-center">
+          <div class="service-box">
+            <i class="fa fa-4x fa-weixin wow bounceIn text-primary"></i>
+            <h3>Have a conversation</h3>
+            <p class="text-muted">Radar leverages a conversational UI for easy project updates. <a id='openDemo' href='#'>Check out a demo!</a></p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
