--- a/bpcs-scorecard/index.html
+++ b/bpcs-scorecard/index.html
@@ -53,8 +53,7 @@
         <ul class="sidebar-menu">
           <li class="header">SCORECARDS</li>
           <!-- Optionally, you can add icons to the links -->
-          <li><a href="index.html"><i class="fa fa-dashboard"></i> <span>Crunchyroll</span></a></li>
-          <li><a href="dashboard2.html"><i class="fa fa-dashboard"></i> <span>Office 365 Commerce</span></a></li>
+          <li class='.loading-status'><a href="#"><i class="fa fa-refresh fa-spin"></i> <span>Loading dashboards...</span></a></li>
         </ul>
         <!-- /.sidebar-menu -->
       </section>
