--- a/radar/landing-page/plans.html
+++ b/radar/landing-page/plans.html
@@ -113,7 +113,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading">All Plans Free For First 30 Days</h2>
+          <h2 class="section-heading">All Plans Free For First 14 Days</h2>
           <hr class="primary">
         </div>
       </div>
@@ -153,7 +153,7 @@
             <h2>Plus</h2>
             <p class="text-muted">A few small or medium sized projects</p>
             <h3>3<span class="smallcaps">Active Projects</span></h3>
-            <h3>2<span class="smallcaps">Project Managers</span></h3>
+            <h3>3<span class="smallcaps">Project Managers</span></h3>
             <h3>9<span class="smallcaps">Stakeholders</span></h3>
             <div class='col-md-10 col-md-offset-2 text-left text-info'>
               <h3>Plus includes<span class='features'>Everything in <b>Basic</b>, and:</span></h3>
@@ -176,11 +176,11 @@
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box">
             <i class="fa fa-4x fa-users wow bounceIn text-success" data-wow-delay=".2s"></i>
-            <h2>Enterprise</h2>
+            <h2>Premium</h2>
             <p class="text-muted">Many projects, various sizes</p>
-            <h3>Unlimited<span class="smallcaps">Active Projects</span></h3>
+            <h3>10<span class="smallcaps">Active Projects</span></h3>
             <h3>10<span class="smallcaps">Project Managers</span></h3>
-            <h3>Unlimited<span class="smallcaps">Stakeholders</span></h3>
+            <h3>30<span class="smallcaps">Stakeholders</span></h3>
             <div class='col-md-10 col-md-offset-2 text-left text-success'>
               <h3>Enterprise includes<span class='features'>Everything in <b>Plus</b>, and:</span></h3>
               <ul>
