--- a/bpcs-scorecard/index.html
+++ b/bpcs-scorecard/index.html
@@ -84,7 +84,7 @@
                 <p>
                   <ol>
                     <li>
-                      Open the Google Sheet.
+                      Open the <a href='https://docs.google.com/spreadsheets/d/1bv3udHegg36oNe56frPqfrThQlCu2wR55w8RhFimZ9Q/edit?usp=sharing'>Google Sheet</a>.
                     </li>
                     <li>
                       <a href="http://www.gcflearnfree.org/googlespreadsheets/11.2">Add a sheet</a>. The name of the sheet <b><u>must not</u></b> contain any spaces, but hyphens are allowed.
@@ -99,7 +99,7 @@
                 <p>
                   <ol>
                     <li>
-                      Open the Google Sheet.
+                      Open the <a href='https://docs.google.com/spreadsheets/d/1bv3udHegg36oNe56frPqfrThQlCu2wR55w8RhFimZ9Q/edit?usp=sharing'>Google Sheet</a>.
                     </li>
                     <li>
                       <a href="http://www.gcflearnfree.org/googlespreadsheets/11.2">Rename the sheet</a>. The name of the sheet <b><u>must not</u></b> contain any spaces, but hyphens are allowed.
