--- a/bpcs-scorecard/index.html
+++ b/bpcs-scorecard/index.html
@@ -78,7 +78,7 @@
               </div>
               <div class="box-body">
                 <p>
-                  All the data, including the dashboard list, comes from Google Sheets. For access to this spreadsheet, contact Michael C. The instructions below are specific to the spreadsheet used.
+                  All the data, including the dashboard list, comes from <a href='https://docs.google.com/spreadsheets/d/1bv3udHegg36oNe56frPqfrThQlCu2wR55w8RhFimZ9Q/edit?usp=sharing'>Google Sheets</a>. The instructions below are specific to the spreadsheet used.
                 </p>
                 <dt>Adding A New Dashboard</dt>
                 <p>
