--- a/radar/landing-page/plans.html
+++ b/radar/landing-page/plans.html
@@ -97,7 +97,7 @@
     </div>
   </nav>
 
-  <header class='header-none'>
+  <header class='header5'>
     <div class="header-content">
       <div class="header-content-inner">
         <h1>Plans & Pricing</h1>
@@ -144,7 +144,7 @@
                 </li>
               </ul>
             </div>
-            <a href="#" data-action="start-free-basic-trial" class="btn mixpanel btn-primary btn-xl">Start Free Trial</a>
+            <a href="#" data-action="start-free-basic-trial" class="btn mixpanel btn-primary btn-xl plans">Start Free Trial</a>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -170,7 +170,7 @@
                 </li>
               </ul>
             </div>
-            <a href="#" data-action="start-free-standard-trial" class="btn mixpanel btn-info btn-xl">Start Free Trial</a>
+            <a href="#" data-action="start-free-standard-trial" class="btn mixpanel btn-info btn-xl plans">Start Free Trial</a>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -196,7 +196,7 @@
               </ul>
             </div>
 
-            <a href="#" data-action="start-free-corporate-trial" class="btn mixpanel btn-success btn-xl">Start Free Trial</a>
+            <a href="#" data-action="start-free-corporate-trial" class="btn mixpanel btn-success btn-xl plans">Start Free Trial</a>
           </div>
         </div>
 
