--- a/bpcs-scorecard/index.html
+++ b/bpcs-scorecard/index.html
@@ -53,7 +53,7 @@
         <ul class="sidebar-menu">
           <li class="header">SCORECARDS</li>
           <!-- Optionally, you can add icons to the links -->
-          <li class='.loading-status'><a href="#"><i class="fa fa-refresh fa-spin"></i> <span>Loading dashboards...</span></a></li>
+          <li class='.loading-status'><a href="#"><i class="fa fa-refresh fa-spin"></i> <span>Loading scorecards...</span></a></li>
         </ul>
         <!-- /.sidebar-menu -->
       </section>
