--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -104,7 +104,7 @@
   <!--WORKS / PORTFOLIO SECTION END  -->
   <section id="blog" class='container-alt'>
     <div class="container">
-      <h2>WHAT IT'S LIKE INSIDE OUR MINDS <a href='connect.html#blog'><small>View All</small></a></h2>
+      <h2>THOUGHT LEADERSHIP BLOG <a href='http://bpcs.com/blog'><small>View All</small></a></h2>
       <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-12">
           <i class="fa fa-comments  fa-5x"></i>
