--- a/bpcs-resources/index.html
+++ b/bpcs-resources/index.html
@@ -42,6 +42,7 @@
           <span class="sr-only">Toggle navigation</span>
         </a>
       </nav>
+
     </header>
     <!-- Left side column. contains the logo and sidebar -->
     <aside class="main-sidebar">
@@ -64,7 +65,7 @@
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
       <section class="content-header">
-        <h1 id='scorecardTitle'>Welcome To The BPCS Resource Allocation Calendar (RAC)</h1>
+        <h1 id='scorecardTitle'>BPCS Resource Allocation Calendar (RAC) <small><span class='pull-right' id='weekOfMonth'></span></small></h1>
       </section>
 
       <!-- Main content -->
@@ -138,6 +139,7 @@
   <script src="plugins/jQuery/jQuery-2.1.4.min.js"></script>
   <script src="plugins/tabletop/tabletop.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
   <script src="dist/js/app.min.js"></script>
   <script src="dist/js/resources.js"></script>
   <script src="dist/js/Chart.js"></script>
