--- a/bpcs-resources/index.html
+++ b/bpcs-resources/index.html
@@ -100,10 +100,10 @@
                 <p>
                   <ol>
                     <li>
-                      Open the <a href='https://docs.google.com/spreadsheets/d/1iDp0SJlnXhAPmaVJxWfnY4SvuEPGdHNTzvVjfiNkjk4/edit?usp=sharing'>Google Sheet</a>.
+                      Open the <a target="_blank" href='https://docs.google.com/spreadsheets/d/1iDp0SJlnXhAPmaVJxWfnY4SvuEPGdHNTzvVjfiNkjk4/edit?usp=sharing'>Google Sheet</a>.
                     </li>
                     <li>
-                      <a href="http://www.gcflearnfree.org/googlespreadsheets/11.2">Rename the sheet</a>.
+                      <a target="_blank" href="http://www.gcflearnfree.org/googlespreadsheets/11.2">Rename the sheet</a>.
                     </li>
                     <li>
                       Refresh the RAC. Your updated dashboard will be listed in the Resources menu.
