--- a/bpcs-resources/index.html
+++ b/bpcs-resources/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
-  <link rel="stylesheet" href="dist/css/skins/skin-green.min.css">
+  <link rel="stylesheet" href="dist/css/skins/skin-blue.min.css">
   <link rel="stylesheet" href="dist/css/scorecard.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -21,7 +21,7 @@
     <![endif]-->
 </head>
 
-<body class="hold-transition skin-green sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini">
   <div class="wrapper">
 
     <!-- Main Header -->
@@ -30,9 +30,9 @@
       <!-- Logo -->
       <a href="index.html" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini"><b>BPCS</b></span>
+        <span class="logo-mini"><b>BP</b></span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg"><b>Blueprint</b> Consulting</span>
+        <span class="logo-lg"><img style='height: 40px;' src='http://www.bpcs.com/assets/img/bpcs-logo-white.png' /></span>
       </a>
 
       <!-- Header Navbar -->
