--- a/radar/landing-page/plans.html
+++ b/radar/landing-page/plans.html
@@ -104,6 +104,8 @@
         <hr>
         <p>
           Low cost subscription plans for everyone in every environment.
+          <br />
+          No credit card required. No obligations.
         </p>
       </div>
     </div>
@@ -114,6 +116,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading">All Plans Free For First 14 Days</h2>
+          <h3 class='text-primary'>No credit card required. No obligations.</h3>
           <hr class="primary">
         </div>
       </div>
