--- a/therac/bootcamp_pop3.html
+++ b/therac/bootcamp_pop3.html
@@ -68,6 +68,13 @@
     border-radius: 5px;
     cursor: pointer;
     font-weight: bold;
+    border: 0px;
+    font-size: 20px;
+  }
+
+  form
+  {
+    text-align: center;
   }
 
 
@@ -90,9 +97,9 @@
         <b>Where</b>: Class meets at Greenlake between the tennis courts and the soccer field.<br />
         <b>First Class</b>: Please show up at 5:45pm to check-in and sign the class waiver
       </p>
-      <form class='button' action="https://Simplecheckout.authorize.net/payment/CatalogPayment.aspx" method="post" name="PrePage" target="_blank" id="PrePage">
+      <form action="https://Simplecheckout.authorize.net/payment/CatalogPayment.aspx" method="post" name="PrePage" target="_blank" id="PrePage">
             <input type="hidden" name="LinkId" value="4d69ba7e-8cc5-4f27-804b-1d162d80c325">
-            Sign Up
+            <input class='button' type = "submit" value = "Sign Up" />
           </form>
     </div>
     <div class="singleClass">
@@ -106,8 +113,9 @@
         <b>Where</b>: Gasworks Park on top of Sundial Hill every class<br />
         <b>First Class</b>: Please show up at 5:50 am to check-in and sign the class waiver
       </p>
-      <form class='button' action="https://Simplecheckout.authorize.net/payment/CatalogPayment.aspx" method="post" name="PrePage" target="_blank" id="PrePage">
-            <input type="hidden" name="LinkId" value="bd0c3fb8-fc16-4630-9089-9d4e6e5b4331">Sign Up
+      <form  action="https://Simplecheckout.authorize.net/payment/CatalogPayment.aspx" method="post" name="PrePage" target="_blank" id="PrePage">
+            <input type="hidden" name="LinkId" value="bd0c3fb8-fc16-4630-9089-9d4e6e5b4331" />
+            <input class='button' type = "submit" value = "Sign Up" />
           </form>
     </div>
     <div class="singleClass">
