--- a/bpcs-internal/index.html
+++ b/bpcs-internal/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
   <link rel="stylesheet" href="dist/css/skins/skin-blue.min.css">
   <link rel="stylesheet" href="dist/css/scorecard2.css">
+  <link rel="stylesheet" href="http://cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -68,111 +69,128 @@
       </section>
 
       <!-- Main content -->
-      <section class="content">
-        <div class='row metrics'>
-          <section class="content">
-            <div class="box box-solid">
-              <div class="box-header with-border">
-                <i class="fa fa-dashboard"></i>
-                <h3 class="box-title">Scorecards</h3>
-              </div>
-              <div class="box-body">
-                <p>
-                  All the data, including the scorecard list, comes from <a target="_blank" href='https://docs.google.com/spreadsheets/d/1EYgL1FVds4UUzQC1k8PHcpUKvTWAo8Rc9NF8j8qZuFM/edit?usp=sharing'>Google Sheets</a>. The instructions below are specific to the spreadsheet used.
-                </p>
-                <dt>Adding A New Person</dt>
-                <p>
-                  <ol>
-                    <li>
-                      Open the <a target="_blank" href='https://docs.google.com/spreadsheets/d/1EYgL1FVds4UUzQC1k8PHcpUKvTWAo8Rc9NF8j8qZuFM/edit?usp=sharing'>Google Sheet</a>.
-                    </li>
-                    <li>
-                      <a target="_blank" href="http://www.gcflearnfree.org/googlespreadsheets/11.2">Add a sheet</a>. The name of the sheet <b><u>must not</u></b> contain any spaces, but hyphens are allowed.
-                    </li>
-                    <li>
-                      Refresh the scorecard. Your new dashboard will be listed in the Scorecards menu.
-                    </li>
-                  </ol>
-                </p>
+      <section class='content'>
+        <div class="row metrics"></div>
+        <div class="box">
+          <div class="box-header">
+            <i class="fa fa-table"></i>
+            <h3 class="box-title">Team Performance & Top 5 Metrics</h3>
+          </div>
+          <div class="box-body">
+            <table id="allUp" class="display">
+              <thead>
+                <tr>
+                  <th>
+                    Name
+                  </th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
 
-                <dt>Editing An Existing Scorecard</dt>
-                <p>
-                  <ol>
-                    <li>
-                      Open the <a target="_blank" href='https://docs.google.com/spreadsheets/d/1EYgL1FVds4UUzQC1k8PHcpUKvTWAo8Rc9NF8j8qZuFM/edit?usp=sharing'>Google Sheet</a>.
-                    </li>
-                    <li>
-                      <a href="http://www.gcflearnfree.org/googlespreadsheets/11.2">Rename the sheet</a>. The name of the sheet <b><u>must not</u></b> contain any spaces, but hyphens are allowed.
-                    </li>
-                    <li>
-                      Refresh the scorecard. Your updated dashboard will be listed in the Scorecards menu.
-                    </li>
-                  </ol>
-                </p>
-              </div>
-            </div>
-          </section>
+          </div>
+        </div>
 
-          <section class="content">
-            <div class="box box-solid">
-              <div class="box-header with-border">
-                <i class="fa fa-line-chart"></i>
-                <h3 class="box-title">Metrics</h3>
-              </div>
-              <div class="box-body">
-                <p>
-                  All data for all metrics comes from Google Sheets. No data is stored internally with this scorecard. The instructions below are specific to the spreadsheet used.
-                </p>
-                <dt>Adding A New Metric</dt>
-                <p>
-                  Each row in a Sheet represents a single metric and includes the following fields:
-                  <ul>
+        <div class="box">
+          <div class="box-header with-border">
+            <i class="fa fa-line-chart"></i>
+            <h3 class="box-title">Metrics</h3>
+          </div>
+          <div class="box-body">
+            <p>
+              All data for all metrics comes from Google Sheets. No data is stored internally with this scorecard. The instructions below are specific to the spreadsheet used.
+            </p>
+            <dt>Adding A New Metric</dt>
+            <p>
+              Each row in a Sheet represents a single metric and includes the following fields:
+              <ul>
+                <li>
+                  <b>metric</b>: This is the name of the metric that will be displayed at the top of the metric on the scorecard.
+                </li>
+                <li>
+                  <b>tooltip</b>: Text that will be displayed in a tooltip when mousing over the metric on the scorecard.
+                </li>
+                <li>
+                  <b>before</b>: This is the text that is displayed immediately before the metric goal. For example, if you have a metric that should display dollar amounts, the <b>before</b> column should contain the <i class="fa fa-dollar text-yellow"></i>                  symbol.
+                </li>
+                <li>
+                  <b>after</b>: This is the text that is displayed immediately after the metric goal. For example, if you have a metric that should display a percentage, the <b>after</b> column should contain the <b>%</b> symbol.
+                </li>
+                <li>
+                  <b>status</b>: This is a color representation of the difference between the goal value and the actual value. The accepted values are:
+                  <ul style="list-style-type: none;">
                     <li>
-                      <b>metric</b>: This is the name of the metric that will be displayed at the top of the metric on the scorecard.
+                      <i class="fa fa-circle-o text-red"></i> red: missed goal expectations
                     </li>
                     <li>
-                      <b>tooltip</b>: Text that will be displayed in a tooltip when mousing over the metric on the scorecard.
+                      <i class="fa fa-circle-o text-yellow"></i> yellow: didn't quite meet the goal expectation, but within an acceptable threshold
                     </li>
                     <li>
-                      <b>before</b>: This is the text that is displayed immediately before the metric goal. For example, if you have a metric that should display dollar amounts, the <b>before</b> column should contain the <i class="fa fa-dollar text-yellow"></i> symbol.
-                    </li>
-                    <li>
-                      <b>after</b>: This is the text that is displayed immediately after the metric goal. For example, if you have a metric that should display a percentage, the <b>after</b> column should contain the <b>%</b> symbol.
-                    </li>
-                    <li>
-                      <b>status</b>: This is a color representation of the difference between the goal value and the actual value. The accepted values are:
-                        <ul style="list-style-type: none;">
-                          <li>
-                            <i class="fa fa-circle-o text-red"></i> red: missed goal expectations
-                          </li>
-                          <li>
-                            <i class="fa fa-circle-o text-yellow"></i> yellow: didn't quite meet the goal expectation, but within an acceptable threshold
-                          </li>
-                          <li>
-                            <i class="fa fa-circle-o text-green"></i> green: met or exceeded goal expectations
-                          </li>
-                        </ul>
-
-                      For example, if your goal is 100% but your actual amount is 85%, you can choose yellow, to indicate this is a warning
-                    </li>
-                    <li>
-                      <b>icon</b>: The icon that best represents the metric. Not required but selected from the dropdown.
-                    </li>
-                    <li>
-                      <b>month-g</b>: The goal for the indicated month. This should be a number, with no percentage or dollar signs (those are added via <b>before</b> and <b>after</b>).
-                    </li>
-                    <li>
-                      <b>month-a</b>: The actual number for the indicated month. This should be a number, with no percentage or dollar signs (those are added via <b>before</b> and <b>after</b>).
+                      <i class="fa fa-circle-o text-green"></i> green: met or exceeded goal expectations
                     </li>
                   </ul>
-                </p>
-              </div>
-            </div>
-          </section>
+
+                  For example, if your goal is 100% but your actual amount is 85%, you can choose yellow, to indicate this is a warning
+                </li>
+                <li>
+                  <b>icon</b>: The icon that best represents the metric. Not required but selected from the dropdown.
+                </li>
+                <li>
+                  <b>month-g</b>: The goal for the indicated month. This should be a number, with no percentage or dollar signs (those are added via <b>before</b> and <b>after</b>).
+                </li>
+                <li>
+                  <b>month-a</b>: The actual number for the indicated month. This should be a number, with no percentage or dollar signs (those are added via <b>before</b> and <b>after</b>).
+                </li>
+              </ul>
+            </p>
+          </div>
         </div>
-        <!-- Your Page Content Here -->
+
+        <div class="box">
+          <div class="box-header with-border">
+            <i class="fa fa-dashboard"></i>
+            <h3 class="box-title">Scorecards</h3>
+          </div>
+          <div class="box-body">
+            <p>
+              All the data, including the scorecard list, comes from <a target="_blank" href='https://docs.google.com/spreadsheets/d/1EYgL1FVds4UUzQC1k8PHcpUKvTWAo8Rc9NF8j8qZuFM/edit?usp=sharing'>Google Sheets</a>. The instructions below are specific
+              to the spreadsheet used.
+            </p>
+            <dt>Adding A New Person</dt>
+            <p>
+              <ol>
+                <li>
+                  Open the <a target="_blank" href='https://docs.google.com/spreadsheets/d/1EYgL1FVds4UUzQC1k8PHcpUKvTWAo8Rc9NF8j8qZuFM/edit?usp=sharing'>Google Sheet</a>.
+                </li>
+                <li>
+                  <a target="_blank" href="http://www.gcflearnfree.org/googlespreadsheets/11.2">Add a sheet</a>. The name of the sheet <b><u>must not</u></b> contain any spaces, but hyphens are allowed.
+                </li>
+                <li>
+                  Refresh the scorecard. Your new dashboard will be listed in the Scorecards menu.
+                </li>
+              </ol>
+            </p>
+
+            <dt>Editing An Existing Scorecard</dt>
+            <p>
+              <ol>
+                <li>
+                  Open the <a target="_blank" href='https://docs.google.com/spreadsheets/d/1EYgL1FVds4UUzQC1k8PHcpUKvTWAo8Rc9NF8j8qZuFM/edit?usp=sharing'>Google Sheet</a>.
+                </li>
+                <li>
+                  <a href="http://www.gcflearnfree.org/googlespreadsheets/11.2">Rename the sheet</a>. The name of the sheet <b><u>must not</u></b> contain any spaces, but hyphens are allowed.
+                </li>
+                <li>
+                  Refresh the scorecard. Your updated dashboard will be listed in the Scorecards menu.
+                </li>
+              </ol>
+            </p>
+          </div>
+        </div>
 
       </section>
+
+
       <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
@@ -194,6 +212,7 @@
   <script src="plugins/tabletop/tabletop.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
   <script src="dist/js/app.min.js"></script>
+  <script src="http://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
   <script src="dist/js/scorecard.js"></script>
 
   <script id="headline1" type="text/x-handlebars-template">
@@ -204,7 +223,7 @@
           <span class="headline-number">{{actual}}</span> {{after}}
           <p class="headline-updated">
             <span class="pull-left"><small class="label bg-gray text-center"><i class="fa fa-trophy"></i> Goal: {{goal}}</small></span>
-              <span class="pull-right"><i class="fa fa-calendar"></i> For {{currentMonth}}</span>
+            <span class="pull-right"><i class="fa fa-calendar"></i> For {{currentMonth}}</span>
           </p>
         </div>
         <div class="icon">
@@ -213,6 +232,26 @@
       </div>
     </div>
   </script>
+
+  <script id="tbody1" type="text/x-handlebars-template">
+    {{#metrics}}
+    <tr>
+      <td>{{this.[0]}}</td>
+      <td>{{this.[1]}}</td>
+      <td>{{this.[2]}}</td>
+      <td>{{this.[3]}}</td>
+      <td>{{this.[4]}}</td>
+    </tr>
+    {{/metrics}}
+  </script>
+
+  <script id="thead1" type="text/x-handlebars-template">
+    {{#metrics}}
+    <th>{{metric}}</th>
+    {{/metrics}}
+  </script>
+
+
 </body>
 
 </html>
