updated table template

--- a/bpcs-internal/index.html
+++ b/bpcs-internal/index.html
@@ -241,6 +241,9 @@
       <td>{{this.[2]}}</td>
       <td>{{this.[3]}}</td>
       <td>{{this.[4]}}</td>
+      <td>{{this.[5]}}</td>
+      <td>{{this.[6]}}</td>
+      <td>{{this.[7]}}</td>
     </tr>
     {{/metrics}}
   </script>
