updated with more columns and team roster exclusion

--- a/bpcs-internal/index.html
+++ b/bpcs-internal/index.html
@@ -244,6 +244,7 @@
       <td>{{this.[5]}}</td>
       <td>{{this.[6]}}</td>
       <td>{{this.[7]}}</td>
+      <td>{{this.[8]}}</td>
     </tr>
     {{/metrics}}
   </script>
