--- a/bpcs-internal/index.html
+++ b/bpcs-internal/index.html
@@ -74,7 +74,7 @@
         <div class="box">
           <div class="box-header">
             <i class="fa fa-table"></i>
-            <h3 class="box-title">Team Performance & Top 5 Metrics</h3>
+            <h3 class="box-title">Team Metrics</h3>
           </div>
           <div class="box-body">
             <table id="allUp" class="display">
