added support for 10 metrics

--- a/bpcs-internal/index.html
+++ b/bpcs-internal/index.html
@@ -245,6 +245,8 @@
       <td>{{this.[6]}}</td>
       <td>{{this.[7]}}</td>
       <td>{{this.[8]}}</td>
+      <td>{{this.[9]}}</td>
+      <td>{{this.[10]}}</td>
     </tr>
     {{/metrics}}
   </script>
