added entrepreneur section to portfolio

--- a/portfolio/designer.html
+++ b/portfolio/designer.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Thinker, creator and leader. Full stack developer, UI/UX designer">
+  <meta name="description" content="Thinker, creator and leader. Full stack developer, UI/UX designer, entrepreneur">
   <meta name="author" content="Gary Nakanelua">
 
   <title>Gary Nakanelua</title>
@@ -78,11 +78,15 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+
           <li>
             <a href="#">The Designer</a>
           </li>
           <li>
             <a href="developer.html">The Developer</a>
+          </li>
+          <li>
+            <a href="entrepreneur.html">The Entrepreneur</a>
           </li>
           <li>
             <a target='_blank' href="https://medium.com/@gnakan/">The Blogger</a>
