--- a/portfolio/developer.html
+++ b/portfolio/developer.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Thinker, creator and leader. Full stack developer, UI/UX designer">
+  <meta name="description" content="Thinker, creator and leader. Full stack developer, UI/UX designer, entrepreneur">
   <meta name="author" content="Gary Nakanelua">
 
   <title>Gary Nakanelua</title>
@@ -100,11 +100,15 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+
           <li>
             <a href="designer.html">The Designer</a>
           </li>
           <li>
             <a href="#">The Developer</a>
+          </li>
+          <li>
+            <a href="entrepreneur.html">The Entrepreneur</a>
           </li>
           <li>
             <a target='_blank' href="https://medium.com/@gnakan/">The Blogger</a>
@@ -136,9 +140,6 @@
   <section id='apps'>
     <div class="container">
       <div class="row">
-        <h1>
-          Production Apps & Services
-        </h1>
         <p>
           I've been the solution architect, development lead or a developer for a large number of products released in large scale production environments. I've had the pleasure to create products for a variety of companies including <a href='http://bpcs.com/' target="_blank">Blueprint Consulting Services</a>,
           <a href="https://www.microsoft.com/en-us/" target="_blank">Microsoft</a>, <a href='http://www.lockheedmartin.com/' target="_blank">Lockheed Martin</a> and <a href='http://www.gannett.com/' target="_blank">USA Today/Gannett</a>.
