--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Thinker, creator and leader. Full stack developer, UI/UX designer">
+  <meta name="description" content="Thinker, creator and leader. Full stack developer, UI/UX designer, entrepreneur">
   <meta name="author" content="Gary Nakanelua">
 
   <title>Gary Nakanelua</title>
@@ -41,36 +41,33 @@
       padding: 20px 0px;
     }
 
-    .project .btn
-    {
+    .project .btn {
       margin-top: 20px;
     }
 
-    .title
-    {
+    .title {
       margin-bottom: 0px;
     }
 
-    .overview
-    {
+    .overview {
       margin-top: 0px;
       font-weight: 300;
       color: gray;
       font-size: 18px;
-    font-style: italic;
+      font-style: italic;
     }
 
-    .subheading
-    {
+    .subheading {
       line-height: 40px !important;
     }
 
-    .subheading a{
+    .subheading a {
       font-weight: bold;
       color: #337ab7;
       border-bottom: 1px dashed #337ab7;
     }
-    .subheading a:hover{
+
+    .subheading a:hover {
       text-decoration: none;
       border-bottom: 1px dashed #337ab7;
     }
@@ -97,11 +94,15 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+
           <li>
             <a href="designer.html">The Designer</a>
           </li>
           <li>
             <a href="developer.html">The Developer</a>
+          </li>
+          <li>
+            <a href="entrepreneur.html">The Entrepreneur</a>
           </li>
           <li>
             <a target='_blank' href="https://medium.com/@gnakan/">The Blogger</a>
@@ -125,7 +126,7 @@
           <div class="site-heading">
             <h1>Hello. I'm Gary.</h1>
             <hr class="small">
-            <span class="subheading">I am a creator that <a href='designer.html'>designs</a> and <a href='developer.html'>develops</a> digital products.</br>This is my portfolio.</span>
+            <span class="subheading">I am an entrepreneur and creator</br>that <a href='designer.html'>designs</a> and <a href='developer.html'>develops</a> digital products.</br>This is my portfolio.</span>
           </div>
         </div>
       </div>
@@ -137,66 +138,71 @@
       <div class="row">
 
         <div class="col-md-4">
-        <img src="img/me.png" alt="This is me" class="img-circle">
+          <img src="img/me.png" alt="This is me" class="img-circle">
         </div>
         <div class="col-m-8">
-        <p>
-          <b>As a designer, </b>I am always striving for visual simplicity that solicits action. My experience has taught me that great design is more than simply "making something pretty" or pushing pixels around in Photoshop. <a href='designer.html'>Learn more about me as a designer</a>.
-        </p>
-        <p>
-          <b>As a developer, </b>I want to build products that people love. My experience has taught me that developers should be approached early and often in the product lifecycle (agile development), empowered to release updates quickly (continuous integration/deployment) and treated as creative problem solvers. <a href='developer.html'>Learn more about me as a developer</a>.
-        </p>
+
+          <p>
+            <b>As a designer, </b>I am always striving for visual simplicity that solicits action. My experience has taught me that great design is more than simply "making something pretty" or pushing pixels around in Photoshop. <a href='designer.html'>Learn more about me as a designer</a>.
+          </p>
+          <p>
+            <b>As a developer, </b>I want to build products that people love. My experience has taught me that developers should be approached early and often in the product lifecycle (agile development), empowered to release updates quickly (continuous
+            integration/deployment) and treated as creative problem solvers. <a href='developer.html'>Learn more about me as a developer</a>.
+          </p>
+          <p>
+            <b>As an entrepreneur, </b>I am driven by a desire to crush the competition, addicted to the effort required to become an expert, and learn from my failures. <a href='entrepreneur.html'>Learn more about me as an entrepreneur</a>.
+          </p>
         </div>
       </div>
     </div>
   </section>
 
-    <hr>
+  <hr>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <ul class="list-inline text-center">
-                        <li>
-                            <a href="https://medium.com/@gnakan/">
-                                <span class="fa-stack fa-lg">
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+          <ul class="list-inline text-center">
+            <li>
+              <a href="https://medium.com/@gnakan/">
+                <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
                                 </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.linkedin.com/in/gnakan">
-                                <span class="fa-stack fa-lg">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/gnakan">
+                <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                                 </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/gnakan?tab=repositories">
-                                <span class="fa-stack fa-lg">
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/gnakan?tab=repositories">
+                <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                                 </span>
-                            </a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted">Copyright &copy; GaryNakanelua.com 2016</p>
-                </div>
-            </div>
+              </a>
+            </li>
+          </ul>
+          <p class="copyright text-muted">Copyright &copy; GaryNakanelua.com 2016</p>
         </div>
-    </footer>
+      </div>
+    </div>
+  </footer>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+  <!-- jQuery -->
+  <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+  <!-- Bootstrap Core JavaScript -->
+  <script src="js/bootstrap.min.js"></script>
 
-    <script src="js/main.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
