--- a/radar/landing-page/index.html
+++ b/radar/landing-page/index.html
@@ -94,7 +94,7 @@
           </li>
 
           <li>
-            <a href="plans.html" data-action="goto-plans-from-index-header-nav" class="btn mixpanel btn-primary btn-xl">Plans & Pricing</a>
+            <a href="plans.html" data-action="goto-plans-from-index-header-nav" class="mixpanel">Plans & Pricing</a>
           </li>
         </ul>
       </div>
