--- a/radar/landing-page/plans.html
+++ b/radar/landing-page/plans.html
@@ -92,6 +92,10 @@
           <li>
             <a href="#contact" data-action="goto-contact-from-index-header-nav" class="page-scroll mixpanel">Contact</a>
           </li>
+
+          <li>
+            <a href="#" data-action="goto-plans-from-index-header-nav" class="mixpanel">Plans & Pricing</a>
+          </li>
         </ul>
       </div>
     </div>
