--- a/radar/landing-page/stakeholders.html
+++ b/radar/landing-page/stakeholders.html
@@ -49,7 +49,7 @@
           </li>
 
           <li>
-            <a href="plans.html" data-action="goto-plans-from-stakeholders-header-nav" class="btn mixpanel btn-primary btn-xl">Plans & Pricing</a>
+            <a href="plans.html" data-action="goto-plans-from-stakeholders-header-nav" class="mixpanel">Plans & Pricing</a>
           </li>
         </ul>
       </div>
