--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -273,7 +273,7 @@
     <div class="container">
       <div class="row">
         <div class='col-md-5'>
-          <h2>BLOG</h2>
+          <h2>THOUGHT LEADERSHIP BLOG <a href='http://bpcs.com/blog'><small>View All</small></a></h2>
         </div>
         <div class='col-md-7'>
           <div class='share-link pull-right text-left'>
@@ -284,7 +284,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id='blogPosts'>
         <div class="col-md-4 col-sm-4 col-xs-12">
           <i class="fa fa-comments  fa-5x"></i>
           <h4 class="head-set">Do You Need An App For That?</h4>
@@ -314,38 +314,7 @@
           <a href='http://bpcs.com/listening.php'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
         </div>
       </div>
-      <hr>
-      <div class="row">
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <i class="fa fa-mobile  fa-5x"></i>
-          <h4 class="head-set">The Importance of Focus</h4>
-          <p class='blog-post-meta'>By Mark Harmsworth</p>
-          <p>
-            Technology in our world has brought many amazing benefits to our lives. Increased mobility, connectivity and access to virtually unlimited information. However, along with the benefits, comes the distraction of just too much information.
-          </p>
-          <a href='http://bpcs.com/importance_focus.php'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
-        </div>
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <i class="fa fa-area-chart  fa-5x"></i>
-          <h4 class="head-set">Data Visualization: Why It's Important</h4>
-          <p class='blog-post-meta'>By Kyle Wagner</p>
-          <p>
-            Does your organization currently have a strategic initiative focused on presenting and making better use of data? Companies spend an inordinate amount of time, money and resources on these initiatives year over year only to see them lose momentum or fail
-            altogether.
-          </p>
-          <a href='http://bpcs.com/data_visualization.php'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
-        </div>
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <i class="fa fa-users  fa-5x"></i>
-          <h4 class="head-set">Insanely Productive Teams</h4>
-          <p class='blog-post-meta'>By Mechele Gruhn</p>
-          <p>
-            Recently, I had a chance to be a part of something truly great. It was a global launch of a product that, while only a short time in the making, would help direct a Fortune 100 company in the direction they want to go. And, the great thing I’m referring
-            to wasn’t the product launch. It was the team that created the product that launched.
-          </p>
-          <a href='http://bpcs.com/productive_teams.php'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
-        </div>
-      </div>
+
     </div>
   </section>
   <section id="contact" class='container-alt-gray'>
@@ -485,6 +454,12 @@
     })(document, "script", "hs-analytics", 300000);
   </script>
   <!-- End of Async HubSpot Analytics Code -->
+  <script type='text/javascript'>
+  $(document).ready(function() {
+    getBlogData(6);
+  });
+
+  </script>
 </body>
 
 </html>
