--- a/bpcs-scorecard/index.html
+++ b/bpcs-scorecard/index.html
@@ -28,7 +28,7 @@
     <header class="main-header">
 
       <!-- Logo -->
-      <a href="index.html" class="logo">
+      <a href="#" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <span class="logo-mini"><b>BPCS</b></span>
         <!-- logo for regular state and mobile devices -->
