--- a/bpcs-scorecard/index.html
+++ b/bpcs-scorecard/index.html
@@ -28,7 +28,7 @@
     <header class="main-header">
 
       <!-- Logo -->
-      <a href="#" class="logo">
+      <a target='_blank' href="https://s-media-cache-ak0.pinimg.com/736x/de/a8/64/dea86449a84921020d8862142ecd24ed.jpg" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <span class="logo-mini"><b>BPCS</b></span>
         <!-- logo for regular state and mobile devices -->
