--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -46,11 +46,9 @@
       </div>
     </div>
   </div>
-  <!-- NAVBAR CODE END -->
-  <!--HOME SECTION END  -->
+
   <div id="solutions" class='hero-control hero-control-scroll'>
     <div class="overlay">
-      <!-- overylay class usage -->
       <div class="container">
         <div class="col-md-8 col-md-offset-2 text-center">
           <div class='hero-box'>
@@ -111,7 +109,7 @@
       </div>
     </div>
   </section>
-  <!--SERVICES SECTION END  -->
+
   <section class='container-alt'>
     <div class="container">
       <h2>CASE STUDIES</h2>
@@ -136,18 +134,7 @@
             </div>
           </div>
         </div>
-        <!--
-                <div class="col-md-4">
-                    <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-connectdevelop  fa-4x"></i></div>
-                        <div class='col-md-8'>
-                            <h4>Measuring and Fixing Promotions In Real Time</h4>
-                            <p>A complex ecosystem of ticketing tools, communication channels, social media platforms and customer service Systems made it impossible for our client to have a truly 360 degree view of the customers’ experience.</p>
-                            <a href='case_studies/Measuring%20and%20Fixing%20Promotions%20In%20Real%20Time.pdf' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
-                        </div>
-                    </div>
-                </div>
-                -->
+
         <div class="col-md-4">
           <div class='white-paper-entry'>
             <div class='col-md-3'><i class="fa fa-area-chart  fa-4x"></i></div>
@@ -172,21 +159,30 @@
           </div>
         </div>
         <div class="col-md-4">
-          <!--
-                    <div class='white-paper-entry'>
-                        <div class='col-md-3'><i class="fa fa-area-chart  fa-4x"></i></div>
-                        <div class='col-md-8'>
-                            <h4>Redesigning End-to-End Customer Experience To Drive SignUp and Retention</h4>
-                            <p>Redesigning the end-to-end customer experience for a global media company allowed the team to shift focus from problem-based customer service to opportunity-driven customer retention, increasing revenue and reducing customer churn.</p>
-                            <a href='case_studies/Redesigning%20End-to-End%20Customer%20Experience%20To%20Drive%20SignUp%20and%20Retention.pdf' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
-                        </div>
-                    </div>
-                    -->
+          <div class='white-paper-entry'>
+            <div class='col-md-3'><i class="fa fa-windows  fa-4x"></i></div>
+            <div class='col-md-8'>
+              <h4>Analytics Engine Development Project</h4>
+              <p>Implementing an effective Software as a Service (SAAS) offering using Microsoft’s Windows Azure Cloud Computing Platform would allow our client to leverage not just the value of their hardware, but also the value of their data.</p>
+              <a href='case_studies/BPCS Case Study_Analytics Engine.pdf' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class='white-paper-entry'>
+            <div class='col-md-3'><i class="fa fa-tachometer  fa-4x"></i></div>
+            <div class='col-md-8'>
+              <h4>Real-Time Business Data Visualization Tool</h4>
+              <p>Developing custom tools to acquire and visualize real-time business data.</p>
+              <a href='case_studies/BPCS Case Study_Real Time Business Data Visualization Tool.pdf' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
-  <!--WORKS / PORTFOLIO SECTION END  -->
+
   <section id="clients" class='container-alt-gray'>
     <div class="container">
       <h2>FEATURED CLIENTS</h2>
@@ -324,18 +320,12 @@
       <div class='col-md-12 col-md-3-offset'>© 2015 bpcs.com | All Rights Reserved.</div>
     </div>
   </footer>
-  <!-- FOOTER SECTION END-->
-  <!-- REQUIRED SCRIPTS FILES -->
-  <!-- CORE JQUERY FILE -->
+
   <script src="assets/js/jquery-1.11.1.js"></script>
-  <!-- REQUIRED BOOTSTRAP SCRIPTS -->
   <script src="assets/js/bootstrap.js"></script>
-  <!-- BACKGROUND VIDEO PLUGIN  -->
   <script src="assets/js/jquery.mb.YTPlayer.js"></script>
-  <!-- SCROLLING SCRIPTS PLUGIN  -->
   <script src="assets/js/jquery.easing.min.js"></script>
   <script src="assets/js/tabletop.js"></script>
-  <!-- CUSTOM SCRIPTS   -->
   <script src="assets/js/custom.js"></script>
   <script src="assets/js/payboard.js"></script>
   <script src="assets/js/googleanalytics.js"></script>
