updated featured cases

--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -82,18 +82,18 @@
       <div class="row">
         <div class="col-md-6">
           <div class='case-study'>
-            <a href='case_studies/A%20Scalable%20Sustainable%20Launch%20Model%20Improves%20Customer%20Experience.pdf' target='blank'>
-              <h3>A Scalable Sustainable Launch Model Improves Customer Experience</h3>
-              <p>Our client’s portfolio of five digital products – and no consistent or predictable launch schedule – created chaos for the customer service and customer experience teams who were expected to support customers.</p>
+            <a href='case_studies/BPCS%20Case%20Study_Analytics%20Engine.pdf' target='blank'>
+              <h3>Analytics Engine Development Project</h3>
+              <p>Implementing an effective Software as a Service (SAAS) offering using Microsoft’s Windows Azure Cloud Computing Platform would allow our client to leverage not just the value of their hardware, but also the value of their data.</p>
               <div class='read-more'> Read More <i class="fa fa-arrow-right fa-fw"></i></div>
             </a>
           </div>
         </div>
         <div class="col-md-6">
           <div class='case-study'>
-            <a href='case_studies/Chat%20and%20Social%20-%20Designing%20World%20Class%20Customer%20Service%20Channel%20Strategy.pdf' target='blank'>
-              <h3>Designing World Class Customer Service Channel Strategy</h3>
-              <p>Struggling to improve their customer experience, our client needed a fresh take on customer interactions, and we developed technology, processes and analytics to create a world-class customer experience.</p>
+            <a href='case_studies/BPCS%20Case%20Study_Real%20Time%20Business%20Data%20Visualization%20Tool.pdf' target='blank'>
+              <h3>Real-Time Business Data Visualization</h3>
+              <p>Developing custom tools to acquire and visualize real-time business data.</p>
               <div class='read-more'>Read More <i class="fa fa-arrow-right fa-fw"></i></div>
           </div>
           </a>
