--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -207,6 +207,7 @@
           <li><img src='assets/img/client_logos/valve-logo.png' alt='Valve'></li>
           <li><img src='assets/img/client_logos/access-fuel-logo.png' alt='Access Fuel'></li>
           <li><img src='assets/img/client_logos/group-health-logo.png' alt='Group Health'></li>
+          <li><img src='assets/img/client_logos/kplogo.png' alt='Kaiser Permanente'></li>
           <li><img src='assets/img/client_logos/pcc-logo.png' alt='PCC'></li>
           <li><img src='assets/img/client_logos/symetra-logo.png' alt='Symetra'></li>
           <li><img src='assets/img/client_logos/tarragon-logo.png' alt='Tarragon'></li>
