--- a/bpcs-scorecard-v2/index.html
+++ b/bpcs-scorecard-v2/index.html
@@ -38,9 +38,13 @@
       <!-- Header Navbar -->
       <nav class="navbar navbar-static-top" role="navigation">
         <!-- Sidebar toggle button-->
-        <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-          <span class="sr-only">Toggle navigation</span>
-        </a>
+        <div class='pull-right'>
+
+
+        <ul class="nav navbar-nav">
+            <li><a href="https://docs.google.com/spreadsheets/d/1bv3udHegg36oNe56frPqfrThQlCu2wR55w8RhFimZ9Q/edit?usp=sharing" target="_blank">Sheet data</a></li>
+          </ul>
+          </div>
       </nav>
     </header>
     <!-- Left side column. contains the logo and sidebar -->
