--- a/bpcs-scorecard-v2/index.html
+++ b/bpcs-scorecard-v2/index.html
@@ -198,7 +198,7 @@
           <p class="headline-updated">
             <span class="pull-left"><small class="label bg-gray text-center"><i class="fa fa-trophy"></i> Goal: {{goal}}</small></span>
             <span class="pull-right"><small class="label bg-gray text-center"><i class="fa fa-info-circle"></i> {{metricSource}}</small></span>
-            <span class="pull-right"><small class="label bg-gray text-center"><i class="fa fa-calendar"></i> May 2016</small></span>
+            <span class="pull-right"><small class="label bg-gray text-center"><i class="fa fa-calendar"></i> {{currentMonth}}</small></span>
 
           </p>
         </div>
